--- a/free.html
+++ b/free.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Neon Games</title>
+  <title>Бесплатные Игры | Neon Games</title>
   <style>
     body {
       background: #0a0a1f;
@@ -56,7 +56,7 @@
 <body>
 
   <header>
-    <h1>Neon Games</h1>
+    <h1>Бесплатные Игры</h1>
     <nav>
       <a href="index.html">Главная</a>
       <a href="free.html">Бесплатные</a>
@@ -65,8 +65,32 @@
   </header>
 
   <section>
-    <h2>Добро пожаловать в Neon Games</h2>
-    <p>Выберите раздел выше, чтобы найти бесплатные или платные игры для скачивания.</p>
+    <h2>Список бесплатных игр</h2>
+
+    <div class="game">
+      <h3>Fortnite</h3>
+      <p>Королевская битва с постройками и уникальным стилем.</p>
+      <a class="download-btn" href="#">Скачать</a>
+    </div>
+
+    <div class="game">
+      <h3>Genshin Impact</h3>
+      <p>Приключенческая RPG в открытом мире с аниме-стилем.</p>
+      <a class="download-btn" href="#">Скачать</a>
+    </div>
+
+    <div class="game">
+      <h3>Rocket League</h3>
+      <p>Футбол на автомобилях с акробатическими трюками.</p>
+      <a class="download-btn" href="#">Скачать</a>
+    </div>
+
+    <div class="game">
+      <h3>Asphalt Legends Unite</h3>
+      <p>Аркадные гонки с высококачественной графикой.</p>
+      <a class="download-btn" href="#">Скачать</a>
+    </div>
+
   </section>
 
 </body>
