--- a/paid.html
+++ b/paid.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Neon Games</title>
+  <title>Платные Игры | Neon Games</title>
   <style>
     body {
       background: #0a0a1f;
@@ -56,7 +56,7 @@
 <body>
 
   <header>
-    <h1>Neon Games</h1>
+    <h1>Платные Игры</h1>
     <nav>
       <a href="index.html">Главная</a>
       <a href="free.html">Бесплатные</a>
@@ -65,8 +65,32 @@
   </header>
 
   <section>
-    <h2>Добро пожаловать в Neon Games</h2>
-    <p>Выберите раздел выше, чтобы найти бесплатные или платные игры для скачивания.</p>
+    <h2>Список платных игр</h2>
+
+    <div class="game">
+      <h3>Marvel Rivals</h3>
+      <p>Эпическая битва героев и злодеев вселенной Marvel.</p>
+      <a class="download-btn" href="#">Купить</a>
+    </div>
+
+    <div class="game">
+      <h3>Overwatch</h3>
+      <p>Командный шутер с уникальными персонажами и соревновательной игрой.</p>
+      <a class="download-btn" href="#">Купить</a>
+    </div>
+
+    <div class="game">
+      <h3>Minecraft</h3>
+      <p>Игра-песочница, где ты создаешь свои собственные миры.</p>
+      <a class="download-btn" href="#">Купить</a>
+    </div>
+
+    <div class="game">
+      <h3>Cyberpunk 2077</h3>
+      <p>Футуристическая RPG с открытым миром и насыщенным сюжетом.</p>
+      <a class="download-btn" href="#">Купить</a>
+    </div>
+
   </section>
 
 </body>
