--- a/free.html
+++ b/free.html
@@ -69,6 +69,7 @@
 
     <div class="game">
       <h3>Fortnite</h3>
+      <img src="https://example.com/images/fortnite.jpg" alt="Fortnite game" style="width: 100%; height: auto; border-radius: 10px;">
       <p>Королевская битва с постройками и уникальным стилем.</p>
       <a class="download-btn" href="#">Скачать</a>
     </div>
